--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-  {%- include head.html -%}
+<!--   {%- include head.html -%} -->
 
   <body>
 
@@ -13,8 +13,8 @@
       </div>
     </main>
 
-    {%- include footer.html -%}
-
+<!--     {%- include footer.html -%}
+ -->
   </body>
 
 </html>
